# watch-server

./: .gitignore  README.md  convert_tflite.py  db.sqlite3  pyproject.toml
.github/workflows/: deploy.yml
config/: asgi.py  celery_app.py  settings.py  urls.py
emotion/ml_models/: best_model_v6.tflite  ppg_model.py
emotion/modules/: apps.py  models.py  tasks.py  urls.py  views.py
logapp/: consumers.py  routing.py
preprocess/: ppg_preprocess.py  twelveSecFilter.py  twelveSecPlot.py
users/: admin.py  authentication.py  middleware.py  models.py  permissions.py  serializers.py  views.py
users/management/commands/: create_user_and_watch.py  delete_pg_user.py  init_opensearch.py  init_watch.py
users/migrations/: 0001_initial.py  0002_watch_uuid.py  0003_remove_watch_uuid.py  0004_alter_watch_user.py
watch/: models.py  opensearch_client.py  opensearch_service.py  opensearch_setup.py  serializers.py  tests.py  urls.py  views.py
