[tool.poetry]
name = "watch-server"
version = "0.1.0"
description = ""
authors = ["knv127 <20200867@sungshin.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
django = "~4.2"
psycopg = { version = "3.1.*", extras = ["binary", "pool"] }
numpy = "^2.2.4"
celery = "^5.5.1"
django-celery-results = "^2.6.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
