[tool.poetry]
name = "watch-server"
version = "0.1.0"
description = ""
authors = ["hajeong67 <20221346@sungshin.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
django = "~4.2"
psycopg = { version = "3.1.*", extras = ["binary", "pool"] }
numpy = "2.1.0"
celery = "^5.5.1"
redis = "^5.2.1"
gunicorn = "^23.0.0"
djangorestframework = "^3.16.0"
drf-spectacular = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
